<resources>

    <!--Main Activity-->
    <string name="app_name">Folio</string>
    <string name="action_view">List</string>
    <string name="action_map">Map</string>

    <!--SearchFragment-->
    <string name="edittext_search">Search Input</string>
    <string-array name="search_array">
        <item>Name</item>
        <item>Tag</item>
    </string-array>
    <string name="action_search">Go</string>
    <!--ListContentFragment-->
    <string name="action_orderby_time">Order by Time</string>
    <string name="action_orderby_name">Order by Name</string>

    <!--Capture Activity-->
    <string-array name="add_content">
        <item>Camera</item>
        <item>Video</item>
        <item>Audio</item>
    </string-array>
    <string name="action_capture">New</string>
    <string name="action_camera">Camera</string>
    <string name="action_video">Video</string>
    <string name="action_audio">Audio</string>
    <string name="action_document">Document</string>

    <!--Detail Activity-->
    <string name="edittext_name">Name</string>
    <string name="edittext_add_tag">Add tag/ID</string>
    <string name="action_add_tag">Add Tag</string>
    <string name="action_delete_tag">X</string>
    <string name="textview_capture_location_default">Location: Unknown</string>
    <string name="textview_capture_location_accuracy_default">Accuracy:  Unknown</string>
    <string name="action_share_content">Share</string>
    <string name="action_save_content">Save</string>
    <string name="action_delete_content">Delete</string>
    <string name="delete_file_dialog">Delete file from device?</string>
    <string name="yes_delete_file_dialog">Yes</string>
    <string name="no_delete_file_dialog">No</string>

</resources>
