<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/viewoptions_edittext_search"
        android:hint="@string/edittext_search"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/viewoptions_button_search"
        android:text="@string/action_search"
        android:onClick="search"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/viewoptions_button_orderby_time"
        android:text="@string/action_orderby_time"
        android:onClick="orderByTime"/>

</LinearLayout>