<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".DetailActivity$DetailFragment">


    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/imageview_capture"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_capture_name"
        android:hint="@string/edittext_name"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textview_capture_timestamp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_capture_location"
        android:text="@string/textview_capture_location_default"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_capture_location_accuracy"
        android:text="@string/textview_capture_location_accuracy_default"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_add_tag"
        android:hint="@string/edittext_add_tag"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/action_add_tag"
        android:text="@string/action_add_tag"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:id="@+id/detail_tags"
        android:layout_gravity="center_horizontal|top" />

</LinearLayout>